Geometry Nodes: Crash in Curve to Mesh node when using a cyclic, single point spline as profile #104341

Closed
opened 2023-02-04 09:26:50 +07:00 by Juan Urdaneta · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.02

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: 55485cb379

Worked: (newest version of Blender that worked as expected)

Short description of error
I know it does not make sense to resample a quadrilateral to one but it simply shouldn´t happen.

Exact steps for others to reproduce the error
Set the resample curve to 1 in the file attached.

FLOR.blend.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.02 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `55485cb379` Worked: (newest version of Blender that worked as expected) **Short description of error** I know it does not make sense to resample a quadrilateral to one but it simply shouldn´t happen. **Exact steps for others to reproduce the error** Set the resample curve to 1 in the file attached. [FLOR.blend](https://archive.blender.org/developer/F14241438/FLOR.blend).

Added subscriber: @Juan-Urdaneta

Added subscriber: @Juan-Urdaneta

Added subscriber: @lone_noel

Added subscriber: @lone_noel

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report and the file to easily reproduce the problem!
I can reproduce the crash in master and also 3.3 LTS.

The core of the issue is that the Curve to Mesh node is trying to create filled caps for a cyclic spline with only one control point, which creates an invalid mesh.

Increasing priority for now, since it's a crash that is easily reproducable with a valid setup, though it's probably rare in practice.

Thanks for the report and the file to easily reproduce the problem! I can reproduce the crash in master and also 3.3 LTS. The core of the issue is that the Curve to Mesh node is trying to create filled caps for a cyclic spline with only one control point, which creates an invalid mesh. Increasing priority for now, since it's a crash that is easily reproducable with a valid setup, though it's probably rare in practice.
Leon Schittek changed title from When resamplig a Quadrilateral curve to 1 in geometry nodes used as a profile for the curve to mesh node, Blender crashes. to Geometry Nodes: Crash in Curve to Mesh node when using a cyclic, single point spline as profile 2023-02-05 02:57:32 +07:00
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:43:09 +07:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-13 09:03:11 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104341
There is no content yet.